# event-notification

./: CHANGELOG.md  Cargo.toml  README-zh.md  README.md
.github/workflows/: audit.yml  rust-clippy.yml  rust.yml
examples/: .env.example  event.toml  simple.rs
src/: bus.rs  config.rs  error.rs  event.rs  global.rs  lib.rs  producer.rs  store.rs
src/adapter/: kafka.rs  mod.rs  mqtt.rs  webhook.rs
tests/: integration.rs
