[package]
name = "event-notification"
version = "0.4.1"
edition = "2024"
authors = ["houseme"]
description = "A modular event notification system with multi-channel support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/houseme/event-notification"
documentation = "https://docs.rs/event-notification"
readme = "README.md"
keywords = ["notification", "event", "messaging", "kafka", "webhook"]
categories = ["asynchronous", "network-programming", "api-bindings"]
rust-version = "1.85"


[dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
figment = { version = "0.10.19", features = ["toml", "yaml", "env"] }
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "charset", "http2", "macos-system-configuration", "stream", "json", "blocking"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12"
smallvec = { version = "1.15.0", features = ["serde"] }
strum = { version = "0.27", features = ["derive"] }
tracing = "0.1.41"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["sync", "net", "macros", "signal", "rt-multi-thread"] }
tokio-util = "0.7.14"
uuid = { version = "1.16.0", features = ["v4", "serde"] }

[dependencies.rdkafka]
version = "0.37.0"
features = ["tokio"]
optional = true

[dependencies.rumqttc]
version = "0.24"
optional = true

[dependencies.axum]
version = "0.8.3"
optional = true

[features]
default = ["webhook"]
webhook = ["dep:reqwest"]
kafka = ["rdkafka"]
mqtt = ["rumqttc"]
http-producer = ["dep:axum"]

[dev-dependencies]
tokio = { version = "1.44.2", features = ["test-util"] }
tracing-subscriber = "0.3.19"
